Split a collection into small sublists